--- a/trainings.yml
+++ b/trainings.yml
@@ -1,24 +1,4 @@
 ---
-- name: Icinga 2 Advanced
-  type: training
-  date: 2020-10-06
-  duration: 3
-  city: Berlin
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-advanced/
-- name: Icinga Director Workshop
-  type: training
-  date: 2020-10-20
-  duration: 2
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-director-workshop/
 - name: Icinga 2 Fundamentals
   type: training
   date: 2020-11-26
@@ -69,3 +49,113 @@
   partner: Dexor S&M GmbH
   partner_link: https://dexor.de/monitoring/
   registration_link: https://dexor.de/icinga2-fundamentals-training-online/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2021-03-02
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2021-05-18
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2021-07-27
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2021-09-21
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2021-12-14
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2021-01-19
+  duration: 3
+  city: Online Class
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-advanced/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2021-04-20
+  duration: 3
+  city: Online Class
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-advanced/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2021-07-06
+  duration: 3
+  city: Online Class
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-advanced/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2021-11-30
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-advanced/
+- name: Icinga Director Workshop
+  type: training
+  date: 2021-07-06
+  duration: 2
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-director-workshop/
+- name: Icinga Director Workshop
+  type: training
+  date: 2021-12-01
+  duration: 2
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/monitoring/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-director-workshop/
