--- a/trainings.yml
+++ b/trainings.yml
@@ -13,7 +13,7 @@
   type: training
   date: 2020-12-01
   duration: 4
-  city: Nuremberg
+  city: Online Class
   country: Germany
   language: german
   partner: NETWAYS GmbH
@@ -23,7 +23,7 @@
   type: training
   date: 2020-12-08
   duration: 3
-  city: Nuremberg
+  city: Online Class
   country: Germany
   language: german
   partner: NETWAYS GmbH
