--- a/trainings.yml
+++ b/trainings.yml
@@ -3,7 +3,7 @@
   type: training
   date: 2020-12-14
   duration: 4
-  city: Köthen
+  city: Online Class
   country: Germany
   language: english
   partner: Dexor S&M GmbH
