--- a/trainings.yml
+++ b/trainings.yml
@@ -25,7 +25,7 @@
   duration: 4
   city: Online Class
   country: Germany
-  language: german
+  language: english
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/monitoring/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
