--- a/trainings.yml
+++ b/trainings.yml
@@ -1,62 +1,81 @@
 ---
 - name: Icinga 2 Fundamentals
   type: training
-  date: 2021-09-21
-  duration: 4
-  city: Online Class
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/monitoring/icinga/
-  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
-- name: Icinga 2 Fundamentals
-  type: training
-  date: 2021-09-28
+  date: 2022-02-08
   duration: 4
   city: Online Class
   country: Germany
   language: english
   partner: Dexor GmbH
   partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
-  registration_link: https://dexor.de/en/blog/icinga2-fundamentals-online-training-28-09-01-10-register-now/
+  registration_link: https://dexor.de/en/icinga2-training-registration-form/
 - name: Icinga 2 Advanced
   type: training
-  date: 2021-10-11
+  date: 2022-02-21
   duration: 3
   city: Online Class
   country: Germany
   language: english
   partner: Dexor GmbH
   partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
-  registration_link: https://dexor.de/en/blog/icinga2-advanced-online-training-11-13-oct-2021-register-now/
-- name: Icinga 2 Advanced
-  type: training
-  date: 2021-11-30
-  duration: 3
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/monitoring/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-advanced/
-- name: Icinga Director Workshop
-  type: training
-  date: 2021-12-01
-  duration: 2
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/monitoring/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-director-workshop/
+  registration_link: https://dexor.de/en/icinga2-training-registration-form/
 - name: Icinga 2 Fundamentals
   type: training
-  date: 2021-12-07
+  date: 2022-05-03
   duration: 4
   city: Online Class
   country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/monitoring/icinga/
-  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
-
+  language: english
+  partner: Dexor GmbH
+  partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
+  registration_link: https://dexor.de/en/icinga2-training-registration-form/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2022-05-16
+  duration: 3
+  city: Online Class
+  country: Germany
+  language: english
+  partner: Dexor GmbH
+  partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
+  registration_link: https://dexor.de/en/icinga2-training-registration-form/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2022-09-05
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: english
+  partner: Dexor GmbH
+  partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
+  registration_link: https://dexor.de/en/icinga2-training-registration-form/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2022-09-19
+  duration: 3
+  city: Online Class
+  country: Germany
+  language: english
+  partner: Dexor GmbH
+  partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
+  registration_link: https://dexor.de/en/icinga2-training-registration-form/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2022-11-15
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: english
+  partner: Dexor GmbH
+  partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
+  registration_link: https://dexor.de/en/icinga2-training-registration-form/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2022-11-28
+  duration: 3
+  city: Online Class
+  country: Germany
+  language: english
+  partner: Dexor GmbH
+  partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
+  registration_link: https://dexor.de/en/icinga2-training-registration-form/
