--- a/trainings.yml
+++ b/trainings.yml
@@ -1,6 +1,16 @@
 ---
 - name: Icinga 2 Fundamentals
   type: training
+  date: 2022-01-25
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: german
+  partner: Netways GmbH
+  partner_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+  registration_link: https://tickets.netways.de/NES/icinga2-Fund/
+- name: Icinga 2 Fundamentals
+  type: training
   date: 2022-02-08
   duration: 4
   city: Online Class
@@ -19,6 +29,26 @@
   partner: Dexor GmbH
   partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
   registration_link: https://dexor.de/en/icinga2-training-registration-form/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2022-03-22
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: german
+  partner: Netways GmbH
+  partner_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+  registration_link: https://tickets.netways.de/NES/icinga2-Fund/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2022-04-05
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: Netways GmbH
+  partner_link: https://www.netways.de/en/trainings/icinga-advanced/
+  registration_link: https://tickets.netways.de/NES/Icinga2-Adv/
 - name: Icinga 2 Fundamentals
   type: training
   date: 2022-05-03
@@ -41,6 +71,26 @@
   registration_link: https://dexor.de/en/icinga2-training-registration-form/
 - name: Icinga 2 Fundamentals
   type: training
+  date: 2022-06-28
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: Netways GmbH
+  partner_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+  registration_link: https://tickets.netways.de/NES/icinga2-Fund/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2022-07-12
+  duration: 3
+  city: Online Class
+  country: Germany
+  language: german
+  partner: Netways GmbH
+  partner_link: https://www.netways.de/en/trainings/icinga-advanced/
+  registration_link: https://tickets.netways.de/NES/Icinga2-Adv/
+- name: Icinga 2 Fundamentals
+  type: training
   date: 2022-09-05
   duration: 4
   city: Online Class
@@ -59,6 +109,26 @@
   partner: Dexor GmbH
   partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
   registration_link: https://dexor.de/en/icinga2-training-registration-form/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2022-09-27
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: Netways GmbH
+  partner_link: https://www.netways.de/en/trainings/icinga-advanced/
+  registration_link: https://tickets.netways.de/NES/Icinga2-Adv/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2022-10-25
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: german
+  partner: Netways GmbH
+  partner_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+  registration_link: https://tickets.netways.de/NES/icinga2-Fund/
 - name: Icinga 2 Fundamentals
   type: training
   date: 2022-11-15
@@ -79,3 +149,14 @@
   partner: Dexor GmbH
   partner_link: https://dexor.de/en/icinga2-for-monitoring-of-the-infrastructure/
   registration_link: https://dexor.de/en/icinga2-training-registration-form/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2022-12-06
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: Netways GmbH
+  partner_link: https://www.netways.de/en/trainings/icinga-advanced/
+  registration_link: https://tickets.netways.de/NES/Icinga2-Adv/
+
